--- a/client/.storybook/reset.css
+++ b/client/.storybook/reset.css
@@ -1,4 +1,38 @@
 
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+}
+
+*::before,
+*::after {
+    display: block;
+} 
+
+h1, h2, h3, h4, h5, h6, p {
+    line-height: 1em;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+ul, li, ol {
+    list-style: none;    
+}
+
 body.sb-show-main.sb-main-padded{
     padding: 0;
     margin: 0;
